# libsocket

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/IWCxx/serialization/: Serialization.h  SerializationException.h
include/IWCxx/server/: Server.h  TCPProcessor.h  TCPServer.h  UDPProcessor.h
include/IWCxx/socket/: Getaddrinfo.h  Socket.h  SocketException.h
include/libsocket/client/: Client.h  TCPClient.h  TCPServer.h  UDPClient.h
include/libsocket/core/: network_typedefs.h
include/libsocket/serialization/: Serialization.h  SerializationException.h
include/libsocket/server/: Server.h  TCPProcessor.h  TCPServer.h  UDPProcessor.h  UDPServer.h
include/libsocket/socket/: Getaddrinfo.h  Socket.h  SocketAddr.h  SocketException.h
src/: Makefile
src/client/: Client.cc  Server.cc  TCPClient.cc  TCPServer.cc  UDPClient.cc  UDPServer.cc
src/serialization/: Serialization.cc  SerializationException.cc
src/server/: Server.cc  TCPProcessor.cc  TCPServer.cc  UDPProcessor.cc  UDPServer.cc
src/socket/: Getaddrinfo.cc  Socket.cc  SocketAddr.cc  SocketException.cc
